--- a/css.html
+++ b/css.html
@@ -49,11 +49,23 @@
 
 <div class="container">
 
-    <div class="starter-template">
-        <h1>'Dem Styles</h1>
-        <p class="lead">This is an introduction to Bootstrap. You need to know how web pages work,
-            but that's about it. It's not anything super advanced, just a "get 'er done" version. You can
-            find way more on the interwebs and the <a href="http://getbootstrap.com/">Bootstrap</a> site.</p>
+    <div class="starter-template row">
+        <h1>Oh! Those Styles!</h1>
+        <div class="well">
+            <p><strong>Sam: </strong>I don't want dessert. I don't want a promotion. I don't want anything.</p>
+            <p><strong>Mrs. Lowry:</strong> Of course you want something. You must have hopes, wishes, dreams.</p>
+            <p><strong>Sam: </strong>No, nothing. Not even dreams!</p>
+
+        </div>
+        <p class="lead">
+            CSS. Makes stuff pretty. That's all right? Well, you might have heard of Bootstrap just for all the CSS goodies,
+            and they are nice. They're clean, concise, and help guarantee cross-device consistency. What more could you possible want?
+        </p>
+    </div>
+
+    <div class="the-rest row" align="center">
+
+        <iframe width="560" height="315" src="//www.youtube.com/embed/Bnx95KyQEAA?list=PLF3CC5CDFF92C41FA" frameborder="0" allowfullscreen></iframe>
     </div>
 
 
