--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <base target="_blank">
+
     <title>Bootstrap Demo</title>
 
     <!-- Bootstrap core CSS -->
@@ -61,7 +63,9 @@
         <p class="lead">You probably also want a text editor, like <a href="https://www.jetbrains.com/webstorm/">WebStorm</a>,
             <a href="http://www.sublimetext.com/">Sublime</a>, <a href="http://notepad-plus-plus.org/">Notepad++</a>,
             <a href="http://brackets.io/">Brackets</a>, or just use vim or emacs. Whatever floats your fancy. Oh, and a browser
-            (don't argue, and just use <a href="http://www.google.com/chrome/">Chrome</a>).
+            (don't argue, and just use <a href="http://www.google.com/chrome/">Chrome</a>). Before you get too deep into Bootstrap, you
+            might want to learn <a href="https://developer.chrome.com/devtools">Chrome Developer Tools for Chrome</a> or
+            <a href="http://getfirebug.com/">Firebug for Firefox</a>, just to make debugging and experimentation even easier!
         </p>
     </div>
 
@@ -71,10 +75,35 @@
             Bootstrap in a Java project? Easy as pie! Check out some examples:
             <ul>
                 <li><a href="https://tools.regenstrief.org/stash/projects/NLP/repos/nlp/browse/ui">NLP UI Project</a> (only inside of Regenstrief)</li>
-
+                <li><a href="https://github.com/regenstrief/Heracles">Heracles</a> A very much, still in-progress project, but I do
+                use Bootstrap, just run with the Maven 'demo' profile.</li>
+                <li><a href="https://github.com/cahilton/spring-boot-sample">Spring Boot Sample</a> Very simple SpringBoot starter project,
+                has all the Bootstrap fixings. Yum!</li>
             </ul>
+            <div class="well">
+                <strong>Note:</strong> The last 2 projects I mention use <a href="http://www.webjars.org/">WebJars</a>, a very
+                nifty way to include client-side libraries into your Java projects. Check it out!
+            </div>
         </p>
     </div>
+
+    <div class="the-rest row">
+        <h2>What does it all mean?</h2>
+        <p class="lead">I don't know, but here's the <a href="https://github.com/cahilton/boostrap-demo">link</a> to download all this
+            stuff from <a href="https://github.com/cahilton">my GitHub page</a>. You can use it as
+            a starter to your own project, or check out the <a href="http://getbootstrap.com/getting-started/">
+                                                               Getting Started page</a> from Bootstrap.
+        </p>
+    </div>
+
+    <div class="the-rest row">
+        <h2>Cue the cute dog photo!</h2>
+        <div align="center">
+             <img src="pet-photographer-richie-schwartz.jpg" class="img-circle" alt="Awwww...." height="300" width="225"/>
+        </div>
+    </div>
+
+    <div class="the-rest row">&nbsp;</div>
 
 
 </div><!-- /.container -->
