--- a/js.html
+++ b/js.html
@@ -49,14 +49,24 @@
 
 <div class="container">
 
-    <div class="starter-template">
+    <div class="starter-template row">
         <h1>Javascript Land</h1>
-        <p class="lead">This is an introduction to Bootstrap. You need to know how web pages work,
-            but that's about it. It's not anything super advanced, just a "get 'er done" version. You can
-            find way more on the interwebs and the <a href="http://getbootstrap.com/">Bootstrap</a> site.</p>
+        <div class="well">
+            <p><strong>Sam:</strong> Can you fix it?</p>
+            <p><strong>Harry:</strong> No, I can't. But I can bypass it with one of these.</p>
+
+        </div>
+        <p class="lead">
+            This page is dedicated to some of the Javascript pieces of Bootstrap. Don't really like Javascript?
+            Well, you know nothing, Jon Snow! Seriously, it's not 1995 anymore, the world of js is better, so listen to some
+            <a href="https://www.youtube.com/watch?v=v2ifWcnQs6M">Crockford</a> and get over it!
+        </p>
     </div>
 
+    <div class="the-rest row" align="center">
 
+        <iframe width="560" height="315" src="//www.youtube.com/embed/dht_3NziwSw?list=PLF3CC5CDFF92C41FA" frameborder="0" allowfullscreen></iframe>
+    </div>
 </div><!-- /.container -->
 
 
