--- a/more.html
+++ b/more.html
@@ -9,6 +9,8 @@
 
     <title>Bootstrap Demo</title>
 
+    <base target="_blank">
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.sandstone.min.css" rel="stylesheet">
 
