stubs for styles

--- a/css.html
+++ b/css.html
@@ -63,6 +63,16 @@
         </p>
     </div>
 
+    <h3>Tables</h3>
+
+    <h3>Forms</h3>
+
+    <h3>Buttons</h3>
+
+    <h3>Contextual Styles</h3>
+
+    <h3>Icons, Images, Close and Caret</h3>
+
     <div class="the-rest row" align="center">
 
         <iframe width="560" height="315" src="//www.youtube.com/embed/Bnx95KyQEAA?list=PLF3CC5CDFF92C41FA" frameborder="0" allowfullscreen></iframe>
