--- a/grid.html
+++ b/grid.html
@@ -206,7 +206,7 @@
     </div>
 
 
-    <div class="the-rest row" align="center">
+    <div class="the-rest row" align="center" style="margin-top:50px">
 
         <iframe width="560" height="315" src="//www.youtube.com/embed/aErDEFpoD_0" frameborder="0" allowfullscreen></iframe>
     </div>
