--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Bootstrap Demo</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.sandstone.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/starter.css" rel="stylesheet">
