--- a/js.html
+++ b/js.html
@@ -10,7 +10,7 @@
     <title>Bootstrap Demo</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.sandstone.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="css/starter.css" rel="stylesheet">
@@ -50,17 +50,25 @@
 <div class="container">
 
     <div class="starter-template row">
-        <h1>Javascript Land</h1>
+        <h1>Javascript and Component Land</h1>
         <div class="well">
             <p><strong>Sam:</strong> Can you fix it?</p>
             <p><strong>Harry:</strong> No, I can't. But I can bypass it with one of these.</p>
 
         </div>
         <p class="lead">
-            This page is dedicated to some of the Javascript pieces of Bootstrap. Don't really like Javascript?
+            This page is dedicated to some of the Javascript and other Component pieces of Bootstrap. Don't really like Javascript?
             Well, you know nothing, Jon Snow! Seriously, it's not 1995 anymore, the world of js is better, so listen to some
-            <a href="https://www.youtube.com/watch?v=v2ifWcnQs6M">Crockford</a> and get over it!
+            <a href="https://www.youtube.com/watch?v=v2ifWcnQs6M">Crockford</a> and get over it! There's lots of stuff here, so I'm just gonna
+            hit the highlights.
         </p>
+    </div>
+
+    <div class="the-rest row">
+        <h3>Modals</h3>
+        <p class="lead">Well, if you're writing a front end, there's going to come a time when you need a modal. For Bootstrap
+        modals (the Chevy version), all you is add your modal html to your page, and then trigger it with a button using the
+        <span class="code">data-toggle="modal"</span> and <span class="code">data-target="#yourModalId"</span> attributes.</p>
     </div>
 
     <div class="the-rest row" align="center">
