add some more context stuff

--- a/css.html
+++ b/css.html
@@ -203,11 +203,11 @@
 
         </div>
         <div class="demo-grid" style="margin-bottom:30px">
-            <h4>Paragraph</h4>
+            <h4>Paragraph <small class="code">.text-{context}</small></h4>
             <p class="toggle-me-context text-default">
                 Quinoa Banksy wayfarers listicle squid. Whatever fap try-hard, DIY Brooklyn fixie occupy plaid drinking vinegar. Sartorial Pinterest XOXO occupy beard Schlitz organic, skateboard YOLO 90's. Occupy bitters pour-over, craft beer deep v disrupt hashtag whatever salvia. Plaid migas Portland Kickstarter hella cardigan. You probably haven't heard of them fingerstache authentic Austin, Neutra slow-carb vegan pop-up Pitchfork kale chips try-hard. Kale chips keytar kogi polaroid cold-pressed, readymade cred DIY messenger bag normcore farm-to-table blog quinoa listicle.
             </p>
-            <h4>Table</h4>
+            <h4>Table <small class="code">{context}</small></h4>
             <table class="table table-bordered">
 
                <tbody>
@@ -221,7 +221,7 @@
                    </tr>
                </tbody>
             </table>
-            <h4>Input Groups</h4>
+            <h4>Input Groups <small class="code">.has-{context}</small></h4>
 
             <div class="form-group has-default has-feedback toggle-me-context-form-group">
                 <label class="control-label" for="inputGroupdefault1">Label</label>
@@ -230,13 +230,13 @@
                     <input type="text" class="form-control" id="inputGroupdefault1" aria-describedby="inputGroupdefault1Status">
                 </div>
             </div>
-            <h4>Button</h4>
+            <h4>Button <small class="code">.btn-{context}</small></h4>
             <button type="button" class="btn btn-default toggle-me-context-button">Click Me!</button>
-            <h4>Backgrounds</h4>
+            <h4>Backgrounds <small class="code">.bg-{context}</small></h4>
             <p class="toggle-me-context-p" style="padding:3px">
                 Kickstarter selvage food truck drinking vinegar twee you probably haven't heard of them, aesthetic fap Neutra whatever High Life next level hashtag umami. Viral cornhole trust fund disrupt biodiesel, YOLO listicle flannel. Carles bitters sustainable butcher cronut food truck. Mlkshk Vice tote bag, asymmetrical raw denim sustainable narwhal 3 wolf moon cliche whatever before they sold out chillwave synth. Hoodie PBR&B Tumblr, Vice XOXO McSweeney's pickled. Beard Austin wolf Blue Bottle seitan mixtape, fanny pack vegan freegan deep v DIY bitters food truck Carles. Try-hard semiotics leggings ugh, +1 crucifix twee health goth American Apparel Etsy asymmetrical.
             </p>
-            <h4>Panels</h4>
+            <h4>Panels <small class="code">.panel-{context}</small></h4>
             <div class="panel panel-default toggle-me-context-panel">
                 <div class="panel-heading">
                     <h3 class="panel-title">Panel title</h3>
