--- a/js.html
+++ b/js.html
@@ -132,6 +132,15 @@
         </p>
     </div>
 
+
+
+    <div class="the-rest row">
+        <h3>Affix</h3>
+        <p class="lead">Affix is nice when you have a really long page and you always
+        want the navigation present. The best example is from <a href="http://getbootstrap.com/javascript/">Bootstrap</a>,
+        so I won't try and reproduce it.</p>
+    </div>
+
     <div class="the-rest row">
         <h3>Carousel</h3>
         <p class="lead">I want a pony! Not really. This is a Bootstrap niceity, but not something I use too often.</p>
