work on link structure

--- a/index.html
+++ b/index.html
@@ -35,15 +35,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Bootstrap Demo</a>
+            <a class="navbar-brand" href="index.html" target="_self">Bootstrap Demo</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li  class="active"><a href="index.html">Home Sweet Home</a></li>
-                <li><a href="grid.html">Structured Stuff</a></li>
-                <li><a href="css.html">Pretty Stuff</a></li>
-                <li><a href="js.html">Fancy Stuff</a></li>
-                <li><a href="more.html">More Stuff</a></li>
+                <li  class="active"><a href="index.html" target="_self">Home Sweet Home</a></li>
+                <li><a href="grid.html" target="_self">Structured Stuff</a></li>
+                <li><a href="css.html" target="_self">Pretty Stuff</a></li>
+                <li><a href="js.html" target="_self">Fancy Stuff</a></li>
+                <li><a href="more.html" target="_self">More Stuff</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
@@ -71,7 +71,7 @@
 
     <div class="the-rest row">
         <h2>There has to be more!</h2>
-        <p class="lead">Sure enough! Visit <a href="more.html">this page</a> to more Bootstrap examples and add-ons. Want to use
+        <p class="lead">Sure enough! Visit <a href="more.html" target="_self">this page</a> to more Bootstrap examples and add-ons. Want to use
             Bootstrap in a Java project? Easy as pie! Check out some examples:
             <ul>
                 <li><a href="https://tools.regenstrief.org/stash/projects/NLP/repos/nlp/browse/ui">NLP UI Project</a> (only inside of Regenstrief)</li>
