--- a/css.html
+++ b/css.html
@@ -9,6 +9,8 @@
 
     <title>Bootstrap Demo</title>
 
+    <base target="_blank">
+
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -33,15 +35,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Bootstrap Demo</a>
+            <a class="navbar-brand" href="index.html" target="_self">Bootstrap Demo</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Home Sweet Home</a></li>
-                <li><a href="grid.html">Structured Stuff</a></li>
-                <li class="active"><a href="css.html">Pretty Stuff</a></li>
-                <li><a href="js.html">Fancy Stuff</a></li>
-                <li><a href="more.html">More Stuff</a></li>
+                <li><a href="index.html" target="_self">Home Sweet Home</a></li>
+                <li><a href="grid.html" target="_self">Structured Stuff</a></li>
+                <li class="active"><a href="css.html" target="_self">Pretty Stuff</a></li>
+                <li><a href="js.html" target="_self">Fancy Stuff</a></li>
+                <li><a href="more.html" target="_self">More Stuff</a></li>
             </ul>
         </div><!--/.nav-collapse -->
     </div>
